--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -13,11 +13,35 @@
 <body>
     <div class="container menu">
         <div class="row">
-            <div class="col-4"><i class='bx bx-menu'></i></div>
-            <div class="col-8"><img src="imgs/LogoMobile.jpg" alt="Chicharronera ToGo"></div> 
+            <div class="col-2"><i class='bx bx-menu'></i></div>
+            <div class="col-6 logo"><img src="imgs/LogoMobile.jpg" alt="Chicharronera ToGo"></div> 
+            <div class="col-2 redes">
+                <i class='bx bxl-whatsapp redes'></i>
+            </div>
+            <div class="col-2 redes" >
+                <i class='bx bxl-facebook redes'></i>
+          
+            </div>
         </div>
     </div>
+    <section class="container presentacion">
 
+        <div class="row">
+            <div class="col-7">
+                <h5 class="card-title">Chicharrones</h5>
+                <h5 class="card-title">Empanadas</h5>
+                <h5 class="card-title">Y Más...</h5>
+            </div>
+        </div>
+    </section>
 
+<!--
+        <ul>
+            <li><i class='bx bx-menu'></i></li>
+            <li><img src="imgs/LogoMobile.jpg" alt="Chicharronera ToGo"></li>
+            <div class="col-2"><i class='bx bxl-whatsapp' ></i></div>
+            <div class="col-2"></div>
+        </ul>
+        -->
 </body>
 </html>
