--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -12,9 +12,22 @@
 </head>
 <body>
     <div class="container menu">
+
+        <div class="topnav" id="myTopnav">
+            <a href="#inicio" class="active">Inicio</a>
+            <a href="#ordenar">Ordenar</a>
+            <a href="#combos">Combos</a>
+            <a href="#menu">Menu</a>
+            <a href="#sobreNosotros">Sobre Nosotros</a>
+            <div class="col-6 logo"><img src="imgs/Logo.JPG" alt="Chicharronera ToGo"></div> 
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class='bx bx-menu'></i>
+            </a>
+          </div>
+        <!--
         <div class="row">
-            <div class="col-2"><i class='bx bx-menu'></i></div>
-            <div class="col-6 logo"><img src="imgs/LogoMobile.jpg" alt="Chicharronera ToGo"></div> 
+            <div class="col-2"></div>
+            
             <div class="col-2 redes">
                 <i class='bx bxl-whatsapp redes'></i>
             </div>
@@ -22,7 +35,7 @@
                 <i class='bx bxl-facebook redes'></i>
           
             </div>
-        </div>
+        </div> -->
     </div>
     <section class="container presentacion">
 
@@ -43,5 +56,15 @@
             <div class="col-2"></div>
         </ul>
         -->
+        <script>
+            function myFunction() {
+              var x = document.getElementById("myTopnav");
+              if (x.className === "topnav") {
+                x.className += " responsive";
+              } else {
+                x.className = "topnav";
+              }
+            }
+    </script>
 </body>
 </html>
