--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -33,16 +33,6 @@
         </nav>
 
 
-       <!-- <div class="topnav" id="myTopnav">
-            <a href="#inicio" class="screen active">Inicio</a>
-            <a href="#ordenar" class="screen">Ordenar</a>
-            <a href="#combos" class="screen">Combos</a>
-            <a href="#menu" class="screen">Menu</a>
-            <a href="#sobreNosotros" class="screen">Sobre Nosotros</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                
-            </a>
-          </div> -->
         <!--
         <div class="row">
             <div class="col-2"></div>
@@ -59,10 +49,15 @@
     <section class="container presentacion">
 
         <div class="row">
-            <div class="col-7">
-                <h5 class="card-title">Chicharrones</h5>
-                <h5 class="card-title">Empanadas</h5>
-                <h5 class="card-title">Y Más...</h5>
+            <div class="col-md-6 inicio">
+                <img src="imgs/Inicio.JPG" alt="Inicio">
+            </div>
+            <div class="col-md-6">
+                <div class="inicioSide">
+                    <h5>Chicharrones</h5>
+                    <h5>Empanadas</h5>
+                    <h5>Y Más...</h5>
+                </div>
             </div>
         </div>
     </section>
@@ -75,6 +70,78 @@
             <div class="col-2"></div>
         </ul>
         
+        -->
+    <section class="container menuSection">
+        <div class="row">
+            <div class="col-md-6 menuImg">
+                <img src="imgs/menu1r.png" alt="">
+                <div class="oval">
+                    <div class="link">
+                        <a href="#">Ordene Aquí</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 menuSide">
+                <div class="parallelogram">
+                    <h1>
+                        Menú
+                    </h1>
+                </div>
+                <div class="menu">
+                    <table>
+                        <tr>
+                            <th colspan="2">Chicharon posta y tostado</th>
+                        </tr>
+                        <tr>
+                            <td>1/4 Kilo</td>
+                            <td>2200</td>
+                        </tr>
+                        <tr>
+                            <td>1/2 Kilo</td>
+                            <td>4400</td>
+                        </tr>
+                        <tr>
+                            <td>3/4 Kilo</td>
+                            <td>6600</td>
+                        </tr>
+                        <tr>
+                            <td>1 Kilo</td>
+                            <td>8800</td>
+                        </tr>
+                    </table>
+                    <table>
+                        <tr>
+                            <th colspan="2">Canasta de chicharron</th>
+                        </tr>
+                        <tr>
+                            <td>Para una persona</td>
+                            <td>3500</td>
+                        </tr>
+                        <tr>
+                            <td>Para dos personas</td>
+                            <td>5500</td>
+                        </tr>
+                        <tr>
+                            <td>Para tres personas</td>
+                            <td>7500</td>
+                        </tr>
+                        <tr>
+                            <td>Para cuatro personas</td>
+                            <td>9500</td>
+                        </tr>
+                        <tr>
+                            <td class="nota" colspan="2">Todas incluyen:</td>
+                        </tr>
+                        <tr>
+                            <td class="nota" colspan="2">Chicharron de carne, chicharron tostado, 
+                                yuca, chimicurri, ensalada y limones.
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </section>
         <script>
             function myFunction() {
               var x = document.getElementById("myTopnav");
