--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -27,8 +27,8 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav">
                     <a href="#" class="nav-item nav-link">Inicio</a>
-                    <a href="#" class="nav-item nav-link">Ordenar</a>
-                    <a href="#" class="nav-item nav-link">Menu</a>
+                    <a href="orden.html" class="nav-item nav-link">Ordenar</a>
+                    <a href="menu.html" class="nav-item nav-link">Menu</a>
                     <a href="#" class="nav-item nav-link">Sobre Nosotros</a>
                 </div>
             </div>
