--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -35,32 +35,28 @@
         </nav>
 
         <div class="row presentacion">
-            <div class="col-md-7 inicio">
+            <div class="col-sm-7 inicio">
                 <img src="imgs/Inicio.JPG" alt="Inicio">
             </div>
-            <div class="col-md-4">
+            <div class="col-sm-5 inicioTexto">
                 <div class="inicio-logo">
                     <img src="imgs/Logo.JPG" alt="Chicharronera ToGo">
                 </div>
-                <div class="inicioSide">
-                    <h2 class="escolonado">Chicharrones</h2>
-                    <h2 class="escolonado esca-side">Empanadas</h2>
-                    <h2 class="escolonado">Patacones</h2>
-                    <h2 class="escolonado esca-side">Y Más...</h5>
+                <div class="row">
+                    <div class="col-sm-7 inicioSide">
+                        <h2 class="escolonado">Chicharrones</h2>
+                        <h2 class="escolonado esca-side">Empanadas</h2>
+                        <h2 class="escolonado">Patacones</h2>
+                        <h2 class="escolonado esca-side">Y Más...</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-11 redes">
+                        <i class='bx bxl-whatsapp'></i>
+                        <i class='bx bxl-facebook'></i>    
+                    </div>
                 </div>
             </div>
-            <div class="col-md-1">
-                <div class="">
-
-                </div>
-                <div class="redes">
-                    <i class='bx bxl-whatsapp'></i>
-                    <br>
-                    <i class='bx bxl-facebook'></i>
-                </div>
-
-            </div>
-
         </div>
 
 
