Change Dir into Index

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -50,15 +50,18 @@
                         <h2 class="escolonado esca-side">Y Más...</h2>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm-11 redes">
-                        <i class='bx bxl-whatsapp'></i>
-                        <i class='bx bxl-facebook'></i>    
+                <div class="row rowDir">
+                    <div class="col-sm-11 dir">
+                        <i class='bx bxs-location-plus' ></i>
+                       125 oeste del Bar Italia.
+                       San Pablo de Heredia, Costa Rica.
                     </div>
                 </div>
             </div>
         </div>
 
+        <!--<i class='bx bxl-whatsapp'></i>
+                        <i class='bx bxl-facebook'></i>-->
 
         <!--
         <div class="row">
