adding order structure

--- a/Proyecto/orden.html
+++ b/Proyecto/orden.html
@@ -36,25 +36,146 @@
         <section class="container orderSection">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-3">
-                        <div class="card" style="width: 18rem;">
+                    <div class="card-deck">
+                        <div class="card">
                             <img src="imgs/Inicio.JPG" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
+                          <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                          <ul class="list-group list-group-flush">
+                            <li class="list-group-item">
+                                <label for="cars">Cantidad:</label>
+                                <select name="cars" id="cars">
+                                  <option value="volvo">0</option>
+                                  <option value="saab">1</option>
+                                  <option value="opel">2</option>
+                                  <option value="audi">3</option>
+                                </select>
+                                <!-- Cantidad: <div class="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                  0
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                  <a class="dropdown-item" href="#">1</a>
+                                  <a class="dropdown-item" href="#">2</a>
+                                  <a class="dropdown-item" href="#">3</a>
+                                </div>
+                              </div> -->
+                            </li>
+                            <li class="list-group-item">Precio: 2,200</li>
+                          </ul>
+                            <a href="#" class="btn btn-dark">Añadir</a>
                           </div>
-                    </div>
-                    <div class="col-sm-3"></div>
-                    <div class="col-sm-3"></div>
-                    <div class="col-sm-3"></div>
+                        </div>
+                        <div class="card">
+                            <img src="imgs/Inicio.JPG" class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <a href="#" class="btn btn-dark">Eliminar</a>
+                          </div>
+                        </div>
+                        <div class="card">
+                            <img src="imgs/Inicio.JPG" class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <a href="#" class="btn btn-dark">Añadir</a>
+                          </div>
+                        </div>
+                        <div class="card">
+                            <img src="imgs/Inicio.JPG" class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <a href="#" class="btn btn-dark">Añadir</a>
+                          </div>
+                        </div>
+                      </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3"></div>
-                    <div class="col-sm-3"></div>
-                    <div class="col-sm-3"></div>
-                    <div class="col-sm-3"></div>
+                    <div class="card-deck">
+                        <div class="card">
+                            <img src="imgs/Inicio.JPG" class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <a href="#" class="btn btn-dark">Eliminar</a>
+                          </div>
+                        </div>
+                        <div class="card">
+                            <img src="imgs/Inicio.JPG" class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <a href="#" class="btn btn-dark">Añadir</a>
+                          </div>
+                        </div>
+                        <div class="card">
+                            <img src="imgs/Inicio.JPG" class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <a href="#" class="btn btn-dark">Eliminar</a>
+                          </div>
+                        </div>
+                        <div class="card">
+                            <img src="imgs/Inicio.JPG" class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <a href="#" class="btn btn-dark">Añadir</a>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-8">
+                        <table class="table table-dark">
+                            <thead>
+                              <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Producto</th>
+                                <th scope="col">Cantidad</th>
+                                <th scope="col">Precio</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <th scope="row">1</th>
+                                <td>Producto</td>
+                                <td>4</td>
+                                <td>2,200</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">2</th>
+                                <td>Producto</td>
+                                <td>4</td>
+                                <td>2,200</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">3</th>
+                                <td>Producto</td>
+                                <td>4</td>
+                                <td>2,200</td>
+                              </tr>
+                              <tr>
+                                <th scope="row"></th>
+                                <td colspan="2">Total</td>
+                                <td>6,600</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                    </div>
+                    <div class="col-sm-4">
+                        <a href="#" class="btn btn-dark">Realizar pedido!</a>
+                    </div>
                 </div>
             </div>
         </section>
