add missing products to order

--- a/Proyecto/orden.html
+++ b/Proyecto/orden.html
@@ -37,7 +37,7 @@
   <section class="container orderSection">
     <div class="container">
       <div class="row">
-        <h2>Chicharon posta y tostado</h2>
+        <h2 id="titulo">Chicharon posta y tostado</h2>
         <div class="card-deck">
           <div id="producto1" class="card">
             <img src="imgs/Inicio.JPG" class="card-img-top" alt="...">
@@ -118,48 +118,89 @@
         </div>
       </div>
       <div class="row">
-        <h2>Chicharon posta y tostado</h2>
+        <h2 id="titulo">Canasta de chicharron</h2>
         <div class="card-deck">
-          <div class="card">
+          <div id="producto5" class="card">
             <img src="imgs/Inicio.JPG" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              <a href="#" class="btn btn-dark">Eliminar</a>
+              <h5 class="card-title">Canasta de chicharron para 1 persona</h5>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  <label for="cantidad">Cantidad:</label>
+                  <select name="cantidad" id="cantidad">
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                  </select>
+                </li>
+                <li class="list-group-item">Precio: <span id="precio">3500</span></li>
+              </ul>
+              <button class="add btn btn-dark">Añadir</button>
             </div>
           </div>
-          <div class="card">
+          <div id="producto6" class="card">
             <img src="imgs/Inicio.JPG" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              <a href="#" class="btn btn-dark">Añadir</a>
+              <h5 class="card-title">Canasta de chicharron para 2 personas</h5>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  <label for="cantidad">Cantidad:</label>
+                  <select name="cantidad" id="cantidad">
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                  </select>
+                </li>
+                <li class="list-group-item">Precio: <span id="precio">5500</span></li>
+              </ul>
+              <button class="add btn btn-dark">Añadir</button>
             </div>
           </div>
-          <div class="card">
+          <div id="producto7" class="card">
             <img src="imgs/Inicio.JPG" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                content. This card has even longer content than the first to show that equal height action.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              <a href="#" class="btn btn-dark">Eliminar</a>
+              <h5 class="card-title">Canasta de chicharron para 3 personas</h5>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  <label for="cantidad">Cantidad:</label>
+                  <select name="cantidad" id="cantidad">
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                  </select>
+                </li>
+                <li class="list-group-item">Precio: <span id="precio">7500</span></li>
+              </ul>
+              <button class="add btn btn-dark">Añadir</button>
             </div>
           </div>
-          <div class="card">
+          <div id="producto8" class="card">
             <img src="imgs/Inicio.JPG" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                content. This card has even longer content than the first to show that equal height action.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              <a href="#" class="btn btn-dark">Añadir</a>
+              <h5 class="card-title">Canasta de chicharron para 4 personas</h5>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  <label for="cantidad">Cantidad:</label>
+                  <select name="cantidad" id="cantidad">
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                  </select>
+                </li>
+                <li class="list-group-item">Precio: <span id="precio">9500</span></li>
+              </ul>
+              <button class="add btn btn-dark">Añadir</button>
             </div>
           </div>
         </div>
+
+        <p>Todas incluyen:
+          <br>
+          Chicharron de carne, chicharron tostado, yuca, chimicurri, ensalada y limones.</p>
       </div>
       <div class="row">
         <div class="col-sm-8">
