--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="row rowDir">
                     <div class="col-sm-11 dir">
-                       <a href="https://goo.gl/maps/iYFhyFmkyNbN2Wmv8"><i class='bx bxs-location-plus' ></i>
+                       <a href="https://goo.gl/maps/iYFhyFmkyNbN2Wmv8" target="_blank"><i class='bx bxs-location-plus' ></i>
                        125 oeste del Bar Italia.
                        San Pablo de Heredia, Costa Rica.
                         </a>
@@ -85,9 +85,9 @@
 
         <div class="row redes">
             <div class="col-sm-12 colRedes">
-                <a href="https://wa.me/50660600360"><i class='bx bxl-whatsapp'></i></a>
-                <a href="https://www.facebook.com/Charliepocss"><i class='bx bxl-facebook'></i></a>
-                <a href="tel:506-6060-0360"><i class='bx bxs-phone'></i>6060-0360</a>
+                <a href="https://wa.me/50660600360" target="_blank"><i class='bx bxl-whatsapp'></i></a>
+                <a href="https://www.facebook.com/Charliepocss" target="_blank"><i class='bx bxl-facebook'></i></a>
+                <a href="tel:506-6060-0360" target="_blank"><i class='bx bxs-phone'></i>6060-0360</a>
             </div>
         </div>
 </body>
