missing details in menu and order
add alert and images in order and responsive design to menu

--- a/Proyecto/orden.html
+++ b/Proyecto/orden.html
@@ -40,7 +40,7 @@
         <h2 id="titulo">Chicharon posta y tostado</h2>
         <div class="card-deck">
           <div id="producto1" class="card">
-            <img src="imgs/Inicio.JPG" class="card-img-top" alt="...">
+            <img src="imgs/order1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">1/4 kilo</h5>
               <ul class="list-group list-group-flush">
@@ -59,7 +59,7 @@
             </div>
           </div>
           <div id="producto2" class="card">
-            <img src="imgs/Inicio.JPG" class="card-img-top" alt="...">
+            <img src="imgs/order2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">1/2 kilo</h5>
               <ul class="list-group list-group-flush">
@@ -78,7 +78,7 @@
             </div>
           </div>
           <div id="producto3" class="card">
-            <img src="imgs/Inicio.JPG" class="card-img-top" alt="...">
+            <img src="imgs/order3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">3/4 kilo</h5>
               <ul class="list-group list-group-flush">
@@ -97,7 +97,7 @@
             </div>
           </div>
           <div id="producto4" class="card">
-            <img src="imgs/Inicio.JPG" class="card-img-top" alt="...">
+            <img src="imgs/order4.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">1 kilo</h5>
               <ul class="list-group list-group-flush">
@@ -121,7 +121,7 @@
         <h2 id="titulo">Canasta de chicharron</h2>
         <div class="card-deck">
           <div id="producto5" class="card">
-            <img src="imgs/Inicio.JPG" class="card-img-top" alt="...">
+            <img src="imgs/canasta1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Canasta de chicharron para 1 persona</h5>
               <ul class="list-group list-group-flush">
@@ -140,7 +140,7 @@
             </div>
           </div>
           <div id="producto6" class="card">
-            <img src="imgs/Inicio.JPG" class="card-img-top" alt="...">
+            <img src="imgs/canasta2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Canasta de chicharron para 2 personas</h5>
               <ul class="list-group list-group-flush">
@@ -159,7 +159,7 @@
             </div>
           </div>
           <div id="producto7" class="card">
-            <img src="imgs/Inicio.JPG" class="card-img-top" alt="...">
+            <img src="imgs/canasta3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Canasta de chicharron para 3 personas</h5>
               <ul class="list-group list-group-flush">
@@ -178,7 +178,7 @@
             </div>
           </div>
           <div id="producto8" class="card">
-            <img src="imgs/Inicio.JPG" class="card-img-top" alt="...">
+            <img src="imgs/canasta4.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Canasta de chicharron para 4 personas</h5>
               <ul class="list-group list-group-flush">
