--- a/Proyecto/menu.html
+++ b/Proyecto/menu.html
@@ -51,51 +51,51 @@
                     <div class="menu">
                         <table>
                             <tr>
-                                <th colspan="2">Chicharon posta y tostado</th>
+                                <th colspan="2">Chicharon</th>
                             </tr>
                             <tr>
-                                <td>1/4 Kilo</td>
-                                <td>2200</td>
+                                <td>Chicharita</td>
+                                <td>1200</td>
                             </tr>
                             <tr>
-                                <td>1/2 Kilo</td>
-                                <td>4400</td>
+                                <td>Pinchos</td>
+                                <td>1200</td>
                             </tr>
                             <tr>
-                                <td>3/4 Kilo</td>
-                                <td>6600</td>
-                            </tr>
-                            <tr>
-                                <td>1 Kilo</td>
-                                <td>8800</td>
+                                <td>Canas-tica</td>
+                                <td>10.900</td>
                             </tr>
                         </table>
                         <table>
                             <tr>
-                                <th colspan="2">Canasta de chicharron</th>
+                                <th colspan="2">Otros</th>
                             </tr>
                             <tr>
-                                <td>Para una persona</td>
-                                <td>3500</td>
+                                <tr>
+                                    <td>Chichapapas</td>
+                                    <td>1500</td>
+                                </tr>
+                                <tr>
+                                    <td>Nachopapas</td>
+                                    <td>3000</td>
+                                </tr>
+                                <tr>
+                                    <td>Patacones To Go</td>
+                                    <td>2000</td>
+                                </tr>
+                                <tr>
+                                    <td>Papas o Patacones</td>
+                                    <td>1000</td>
+                                </tr>
+                                <tr>
+                                    <td>Empanadas Miedo</td>
+                                    <td>2000</td>
+                                </tr>
+                            <tr>
+                                <td class="nota" colspan="2">Ojo</td>
                             </tr>
                             <tr>
-                                <td>Para dos personas</td>
-                                <td>5500</td>
-                            </tr>
-                            <tr>
-                                <td>Para tres personas</td>
-                                <td>7500</td>
-                            </tr>
-                            <tr>
-                                <td>Para cuatro personas</td>
-                                <td>9500</td>
-                            </tr>
-                            <tr>
-                                <td class="nota" colspan="2">Todas incluyen:</td>
-                            </tr>
-                            <tr>
-                                <td class="nota" colspan="2">Chicharron de carne, chicharron tostado, 
-                                    yuca, chimicurri, ensalada y limones.
+                                <td class="nota" colspan="2">Tenemos otros deliciosos productos llámenos.
                                 </td>
                             </tr>
                         </table>
