--- a/Proyecto/orden.html
+++ b/Proyecto/orden.html
@@ -37,12 +37,12 @@
   <section class="container orderSection">
     <div class="container">
       <div class="row">
-        <h2 id="titulo">Chicharon posta y tostado</h2>
+        <h2 id="titulo">Qué Delicia...</h2>
         <div class="card-deck">
           <div id="producto1" class="card">
             <img src="imgs/order1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">1/4 kilo</h5>
+              <h5 class="card-title">CANAS-TICA</h5>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">
                   <label for="cantidad">Cantidad:</label>
@@ -53,7 +53,7 @@
                     <option value="3">3</option>
                   </select>
                 </li>
-                <li class="list-group-item">Precio: <span id="precio">2200</span></li>
+                <li class="list-group-item">Precio: <span id="precio">10900</span></li>
               </ul>
               <button class="add btn btn-dark">Añadir</button>
             </div>
@@ -61,7 +61,7 @@
           <div id="producto2" class="card">
             <img src="imgs/order2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">1/2 kilo</h5>
+              <h5 class="card-title">Chichapapas</h5>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">
                   <label for="cantidad">Cantidad:</label>
@@ -72,7 +72,7 @@
                     <option value="3">3</option>
                   </select>
                 </li>
-                <li class="list-group-item">Precio: <span id="precio">4400</span></li>
+                <li class="list-group-item">Precio: <span id="precio">1500</span></li>
               </ul>
               <button class="add btn btn-dark">Añadir</button>
             </div>
@@ -80,7 +80,7 @@
           <div id="producto3" class="card">
             <img src="imgs/order3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">3/4 kilo</h5>
+              <h5 class="card-title">Nachopapas</h5>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">
                   <label for="cantidad">Cantidad:</label>
@@ -91,7 +91,7 @@
                     <option value="3">3</option>
                   </select>
                 </li>
-                <li class="list-group-item">Precio: <span id="precio">6600</span></li>
+                <li class="list-group-item">Precio: <span id="precio">3000</span></li>
               </ul>
               <button class="add btn btn-dark">Añadir</button>
             </div>
@@ -99,7 +99,7 @@
           <div id="producto4" class="card">
             <img src="imgs/order4.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">1 kilo</h5>
+              <h5 class="card-title">Patacones</h5>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">
                   <label for="cantidad">Cantidad:</label>
@@ -110,7 +110,7 @@
                     <option value="3">3</option>
                   </select>
                 </li>
-                <li class="list-group-item">Precio: <span id="precio">8800</span></li>
+                <li class="list-group-item">Precio: <span id="precio">2000</span></li>
               </ul>
               <button class="add btn btn-dark">Añadir</button>
             </div>
@@ -118,12 +118,12 @@
         </div>
       </div>
       <div class="row">
-        <h2 id="titulo">Canasta de chicharron</h2>
+        <h2 id="titulo">¿Quién dijo miedo?</h2>
         <div class="card-deck">
           <div id="producto5" class="card">
             <img src="imgs/canasta1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Canasta de chicharron para 1 persona</h5>
+              <h5 class="card-title">Pinchos</h5>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">
                   <label for="cantidad">Cantidad:</label>
@@ -134,7 +134,7 @@
                     <option value="3">3</option>
                   </select>
                 </li>
-                <li class="list-group-item">Precio: <span id="precio">3500</span></li>
+                <li class="list-group-item">Precio: <span id="precio">1200</span></li>
               </ul>
               <button class="add btn btn-dark">Añadir</button>
             </div>
@@ -142,7 +142,7 @@
           <div id="producto6" class="card">
             <img src="imgs/canasta2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Canasta de chicharron para 2 personas</h5>
+              <h5 class="card-title">Papas o Patacones</h5>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">
                   <label for="cantidad">Cantidad:</label>
@@ -153,7 +153,7 @@
                     <option value="3">3</option>
                   </select>
                 </li>
-                <li class="list-group-item">Precio: <span id="precio">5500</span></li>
+                <li class="list-group-item">Precio: <span id="precio">1000</span></li>
               </ul>
               <button class="add btn btn-dark">Añadir</button>
             </div>
@@ -161,7 +161,7 @@
           <div id="producto7" class="card">
             <img src="imgs/canasta3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Canasta de chicharron para 3 personas</h5>
+              <h5 class="card-title">Empanadas Miedo</h5>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">
                   <label for="cantidad">Cantidad:</label>
@@ -172,7 +172,7 @@
                     <option value="3">3</option>
                   </select>
                 </li>
-                <li class="list-group-item">Precio: <span id="precio">7500</span></li>
+                <li class="list-group-item">Precio: <span id="precio">2000</span></li>
               </ul>
               <button class="add btn btn-dark">Añadir</button>
             </div>
@@ -180,7 +180,7 @@
           <div id="producto8" class="card">
             <img src="imgs/canasta4.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Canasta de chicharron para 4 personas</h5>
+              <h5 class="card-title">Como Mejenguero 1 kilo de chicharron + yuca o patacones + limones </h5>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">
                   <label for="cantidad">Cantidad:</label>
@@ -191,7 +191,7 @@
                     <option value="3">3</option>
                   </select>
                 </li>
-                <li class="list-group-item">Precio: <span id="precio">9500</span></li>
+                <li class="list-group-item">Precio: <span id="precio">9400</span></li>
               </ul>
               <button class="add btn btn-dark">Añadir</button>
             </div>
